--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rand = "0.8.4"
 statrs = "0.16.0"
+plotters = "0.3.5"
+rocket = "0.5.0"
