--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.0"
+rand_distr = "0.4.0"
 reqwest = { version = "0.11", features = ["json"] }
-serde = "1.0"
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-rand = "0.8.4"
-statrs = "0.16.0"
+
+
