--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15.0"
 rand = "0.8.0"
 rand_distr = "0.4.0"
 reqwest = { version = "0.11", features = ["json"] }
